# strava2kmz

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  TODO.md
.github/workflows/: rust.yml
src/: activity.rs  kmz_writer.rs  lib.rs  main.rs
tests/: integration_test.rs
