[package]
name = "strava2kmz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
csv = "1.2.1"
serde = { version = "1.0.162", features = ["derive"] }
zip = { version = "0.6.5", default-features = false, features = ["deflate"] }
gpx_kml_convert = {git = "https://github.com/vilaureu/gpx_kml_convert.git" }
flate2 = "1.0.26"
anyhow = "1.0.71"
indicatif = "0.17.3"
log = "0.4.17"
clap-verbosity-flag = "2.0.1"
env_logger = "0.10.0"

[dev-dependencies]
assert_cmd = "2.0.11"
assert_fs = "1.0.13"
predicates = "3.0.3"
